# inria_wbc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  data_plotter.py  freq.csv  plot3_gp.py  plot_gp.py  results_BO_plotter.py  time_record_file.csv  time_record_file_opti_scaled.csv  vive_left_data__opti_scaled_sample1.csv  vive_left_data_sample1.csv  vive_right_data__opti_scaled_sample1.csv  vive_right_data_sample1.csv
cmake/: inria_wbc.cmake.in  inria_wbcConfigVersion.cmake.in  tsid_controllers.cmake.in  tsid_controllersConfigVersion.cmake.in
docs/: installation.md
etc/: arm.yaml  circular_cartesian.yaml  circular_cartesian_trajectory.yaml  double_support.yaml  fixed_base.yaml  franka_configurations.srdf  franka_pos_tracker.yaml  sot.yaml  squat.yaml  talos_clapping.yaml  talos_configurations.srdf  talos_pos_tracker.yaml  tasks_franka.yaml  tasks_talos.yaml  teleop.yaml  walk_on_spot.yaml
etc/franka/: cartesian_line.yaml  configurations.srdf  pos_tracker.yaml  tasks.yaml
etc/icub/: align.yaml  arm.yaml  clapping.yaml  configuration.srdf  configurations.srdf  frames.yaml  humanoid_pos_tracker.yaml  icub_collision_spheres.yaml  pos_tracker.yaml  squat.yaml  stab_double_support.yaml  stab_fixed_base.yaml  stab_single_support.yaml  tasks.yaml  traj_teleop1.yaml  walk.yaml  walk_on_spot.yaml
etc/icub/traj_teleop1/: com.csv  lh.csv
etc/talos/: active_walk.yaml  active_walk2.yaml  align.yaml  arm.yaml  arm_circle.yaml  collision_thresholds.yaml  configurations.srdf  d_reflex.yaml  exercises.yaml  follow_trackers.yaml  frames.yaml  move_com.yaml  move_feet.yaml  randomize.yaml  squat.yaml  stab_double_support.yaml  stab_fixed_base.yaml  stab_single_support.yaml  talos_fast_collision_d_reflex.urdf  talos_pos_tracker.yaml  talos_pos_tracker_real_robot.yaml  tasks.yaml  tasks_d_reflex.yaml  tasks_walk.yaml  traj_teleop1.yaml  walk.yaml  walk_on_spot.yaml
etc/talos/collisions/: talos_collisions.yaml  talos_collisions_margin.yaml
etc/talos/crocoddyl_replay/: q_fddp.csv  trajectory.yaml
etc/talos/joint_replay/: q_one_knee.csv  taichi.csv  trajectory.yaml
etc/talos/load_external/: q_one_knee.csv  q_one_leg.csv  trajectory.yaml
etc/talos/traj_teleop1/: rh.csv  trajectory.yaml
etc/tiago/: cartesian_line.yaml  collisions.yaml  configurations-elbow-down.srdf  configurations-elbow-up.srdf  configurations.srdf  frames.yaml  pos_tracker.yaml  tasks.yaml
etc/yaml/: sot-squat.yaml  sot.yaml
example_project/: CMakeLists.txt  README.md  create_project.sh
example_project/cmake/: example_project.cmake.in  example_projectConfigVersion.cmake.in
example_project/etc/: example_collisions_margin.yaml  example_project.yaml  example_project_behavior.yaml  example_project_controller.yaml  frames_example.yaml  talos_configurations.srdf  tasks_example.yaml
example_project/include/inria_wbc/behaviors/: ex_behavior.hpp
example_project/include/inria_wbc/controllers/: ex_controller.hpp
example_project/include/tsid/tasks/: ex_task.hpp
example_project/src/behaviors/: ex_behavior.cpp
example_project/src/controllers/: ex_controller.cpp
example_project/src/robot_dart/: talos.cpp  test_controller.cpp  tutorial_0.cpp  tutorial_1.cpp
example_project/src/tsid/: ex_task.cpp
include/: math-utils.hpp  talos_pos_tracking.hpp  trajectory-handler.hpp  trajectory_handler.hpp  tsid-sot.hpp  tsid_sot_talos.hpp  utils.hpp
include/behaviors/: behavior.hpp  factory.hpp  talos_move_arm.hpp  talos_squat.hpp
include/controllers/: talos_base_controller.hpp  talos_pos_tracking.hpp
include/examples/: factory.hpp  talos_move_arm.hpp  talos_squat.hpp  talos_teleop.hpp
include/inria_wbc/: exceptions.hpp
include/inria_wbc/behaviors/: behavior.hpp  circular_cartesian_trajectory.hpp  factory.hpp  franka_circular_cartesian.hpp  talos_clapping.hpp  talos_move_arm.hpp  talos_squat.hpp  talos_teleop.hpp  talos_walk_on_spot.hpp
include/inria_wbc/controllers/: controller.hpp  franka_cartesian_pos_tracking.hpp  franka_pos_tracker.hpp  humanoid_pos_tracker.hpp  pos_tracker.hpp  talos_base_controller.hpp  talos_pos_tracker.hpp  talos_pos_tracking.hpp  tasks.hpp
include/tsid/: task-self-collision.hpp
include/utils/: trajectory_handler.hpp  utils.hpp
res/models/: talos_configurations.srdf
res/yaml/: sot-squat.yaml
src/: ex_talos.cpp  ex_talos_squat.cpp  talos-squat.cpp  talos.cpp  talos_pos_tracking.cpp  tsid_sot_talos.cpp
src/behaviors/: behavior.cpp  circular_cartesian_trajectory.cpp  franka_circular_cartesian.cpp  talos_clapping.cpp  talos_move_arm.cpp  talos_squat.cpp  talos_teleop.cpp  talos_walk_on_spot.cpp
src/controllers/: controller.cpp  franka-cartesian-pos-tracking.cpp  franka_pos_tracker.cpp  humanoid_pos_tracker.cpp  pos_tracker.cpp  talos_base_controller.cpp  talos_pos_tracker.cpp  talos_pos_tracking.cpp  tasks.cpp
src/estimators/: cop.cpp
src/examples/: talos_move_arm.cpp  talos_move_hand.cpp  talos_squat.cpp  talos_teleop.cpp
src/maths/: Polynomial.cpp  TrajectoryBangBangAcc.cpp
src/robot_dart/: BOtalos_tracking.cpp  CMakeLists.txt  evaluate_cop.cpp  franka.cpp  icub.cpp  qp_timer_test.cpp  squat_no_factory.cpp  talos.cpp  talos_load_external.cpp  test_cartesian_controller_franka.cpp  test_controller.cpp  test_limbo.cpp  test_limbo_complex.cpp  test_masses.cpp  test_talos_scaled_tracking.cpp  test_torque_safety.cpp  tiago.cpp  tutorial_0.cpp  tutorial_1.cpp  tutorial_2.cpp  wscript
src/safety/: collision_check.cpp  torque_collision_detection.cpp  torque_safety.cpp
src/stabilizers/: stabilizer.cpp
src/trajs/: loader.cpp  saver.cpp
src/tsid/: task-momentum-equality.cpp  task-self-collision.cpp
src/utils/: ViveTracking.cpp  collision_check.cpp  robot_model.cpp  talos_scaled_tracking.cpp  torque_safety.cpp
tests/: CMakeLists.txt  ref_test_franka.yaml  ref_test_talos.yaml  test_all_robots.cpp  test_behavior.hpp  test_behaviors.cpp  test_behaviors_talos.cpp  test_clone.cpp  test_determinism.cpp  test_deterministic.cpp  test_example_project.sh  test_factory.cpp  test_franka.cpp  test_robot_model.cpp  test_talos.cpp  utest.hpp
(+57 files in other folders)
